--- a/.github/workflows/main-push.yml
+++ b/.github/workflows/main-push.yml
@@ -18,23 +18,27 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Setup PHP, with composer and extensions
         uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
-          with:
-            php-version: ${{ matrix.php-versions }}
-            extensions: mbstring, intl, gd, imagick, zip, dom, mysql
-            coverage: xdebug #optional
+        with:
+          php-version: ${{ matrix.php-versions }}
+          extensions: mbstring, intl, gd, imagick, zip, dom, mysql
+          coverage: xdebug #optional
+          tools: codeception, phpunit
+
       - name: PHP Version
         run: |
           php -v
+
       - name: Edit File
         run: |
           echo Test Content > /tmp/testfile.txt
+
       - name: List Files
         run: |
           ls -lart /tmp
+
       - name: File Content
         run: |
           cat /tmp/testfile.txt
-
-
