--- a/.github/workflows/main-push.yml
+++ b/.github/workflows/main-push.yml
@@ -19,26 +19,40 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      # Code sniffing with phpcs, phpmd, psalm
+      # Static code analysis with phan, phpstan
+      # Unit/Functional tests with phpunit, codeception
       - name: Setup PHP, with composer and extensions
         uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
         with:
           php-version: ${{ matrix.php-versions }}
           extensions: mbstring, intl, gd, imagick, zip, dom, mysql
-          coverage: xdebug #optional
-          tools: codeception, phpunit
+          coverage: none #optional
+          tools: codeception, phpunit, phpcs, phpmd, psalm, phan, phpstan
+
+      - name: Setup problem matchers for PHP
+        run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
 
       - name: PHP Version
-        run: |
-          php -v
+        run: php -v
 
-      - name: Edit File
-        run: |
-          echo Test Content > /tmp/testfile.txt
+      - name: PHPStan  # https://github.com/phpstan/phpstan
+        run: phpstan analyse . --error-format=checkstyle | cs2pr
 
-      - name: List Files
-        run: |
-          ls -lart /tmp
+      #- name: PHPCS
+      #  run: phpcs
 
-      - name: File Content
-        run: |
-          cat /tmp/testfile.txt
+#      - name: Edit File
+#        run: |
+#          echo Test Content > /tmp/testfile.txt
+
+#      - name: List Files
+#        run: |
+#          ls -lart /tmp
+
+#      - name: File Content
+#        run: |
+#          cat /tmp/testfile.txt
+
+
+
