--- a/.github/workflows/main-push.yml
+++ b/.github/workflows/main-push.yml
@@ -14,7 +14,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-versions: ['7.2', '7.4']
+        #php-versions: ['7.2', '7.4']
+        php-versions: ['7.2']
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -22,13 +23,14 @@ jobs:
       # Code sniffing with phpcs, phpmd, psalm
       # Static code analysis with phan, phpstan
       # Unit/Functional tests with phpunit, codeception
+      # Required support tools: cs2pr - for output formatting from phpcs and phpstan
       - name: Setup PHP, with composer and extensions
         uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
         with:
           php-version: ${{ matrix.php-versions }}
           extensions: mbstring, intl, gd, imagick, zip, dom, mysql
           coverage: none #optional
-          tools: codeception, phpunit, phpcs, phpmd, psalm, phan, phpstan
+          tools: codeception, phpunit, phpcs, phpmd, psalm, phan, phpstan, cs2pr
 
       - name: Setup problem matchers for PHP
         run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
