Typo fix on phpmd

--- a/.github/workflows/main-push.yml
+++ b/.github/workflows/main-push.yml
@@ -52,7 +52,7 @@ jobs:
       #- name: PHPCS
       #  run: phpcs
 
-      - name: PHPMD #
+      #- name: PHPMD #
         # run:
 
 #      - name: Edit File
