--- a/.github/workflows/main-push.yml
+++ b/.github/workflows/main-push.yml
@@ -35,9 +35,6 @@ jobs:
       - name: Setup problem matchers for PHP
         run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
 
-      - name: Composer - Install PHPLint
-        run: composer require overtrue/phplint
-
       #- name: PHP Version
       #  run: php -v
 
@@ -65,11 +62,19 @@ jobs:
       #  if: ${{ always() }}
       #  run: phan
 
+
+      -name: get current directory
+       run: pwd
+
       # Static Analyzer
       # Requires install via composer (composer require overtrue/phplint)
+      - name: Install PHP-Lint via Composer
+        if: ${{ always() }}
+        run: mkdir /phplint && cd /phplint && composer require overtrue/phplint && ln -s /phplint/vendor/bin/phplint /usr/local/bin/phplint && cd /
+
       - name: PHP-Lint
         if: ${{ always() }}
-        run: phplint ./
+        run: /phplint/phplint ./
 
 
 #      - name: Edit File
