--- a/.github/workflows/main-push.yml
+++ b/.github/workflows/main-push.yml
@@ -67,13 +67,15 @@ jobs:
 
       # Static Analyzer
       # Requires install via composer (composer require overtrue/phplint)
-      - name: Install PHP-Lint via Composer # https://github.com/overtrue/phplint, https://github.com/michaelw90/PHP-Lint/commit/8c168c7ddac93344b4a5d32e41312ecf46b7f2a2
+      - name: Install PHP-Lint via Composer # https://github.com/michaelw90/PHP-Lint/commit/8c168c7ddac93344b4a5d32e41312ecf46b7f2a2
         if: ${{ always() }}
         run: mkdir phplint && cd phplint && composer require overtrue/phplint && ln -s ./vendor/bin/phplint /usr/local/bin/phplint && cd ..
 
-      - name: PHP-Lint
+      - name: PHP-Lint # https://github.com/overtrue/phplint
         if: ${{ always() }}
         run: ./phplint/vendor/bin/phplint -n ./ --exclude=vendor
+
+      # Consider checkstyle during pull-requests - see https://github.com/staabm/annotate-pull-request-from-checkstyle
 
 #      - name: Edit File
 #        run: |
