--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,9 +1,9 @@
 parameters:
 	level: 1
 	paths:
-		- ./test-syntaxerror.php
-		- ./test-syntaxerror2.php
-		- ./test-working.php
-     excludes_analyse:
-        - tests
-        - vendor
+	    - ./test-syntaxerror.php
+	    - ./test-syntaxerror2.php
+	    - ./test-working.php
+	exclude_analyse:
+	    - tests
+	    - vendor
