Added always() to git push run

--- a/.github/workflows/main-push.yml
+++ b/.github/workflows/main-push.yml
@@ -99,6 +99,7 @@ jobs:
           echo "SHA1: " ${GITHUB_SHA} >> ./VERSION
 
       - name: Push updated version file
+        if: ${{ always() }}
         run: |
           git config --local user.email "infra@stash.global"
           git config --local user.name ${GITHUB_ACTOR}
