Updated github actions

--- a/.github/workflows/dev-push.yml
+++ b/.github/workflows/dev-push.yml
@@ -1,7 +1,10 @@
 # Github test action during pushes
 # YML workflow reference: https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions
-name: CI Push Test
-on: [push]
+name: Master Push
+on:
+  push:
+    branches:
+     - master
 jobs:
   php_check:
     name: PHP Checks
@@ -24,26 +27,26 @@ jobs:
       # Static code analysis with phan, phpstan
       # Unit/Functional tests with phpunit, codeception
       # Required support tools: cs2pr - for output formatting from phpcs and phpstan
-      - name: Setup PHP, with composer and extensions
-        uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
-        with:
-          php-version: ${{ matrix.php-versions }}
-          extensions: mbstring, intl, gd, imagick, zip, dom, mysql
-          coverage: none #optional
-          tools: codeception, phpunit, phpcs, phpmd, phan, phpstan, cs2pr
+      #- name: Setup PHP, with composer and extensions
+      #  uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
+      #  with:
+      #    php-version: ${{ matrix.php-versions }}
+      #    extensions: mbstring, intl, gd, imagick, zip, dom, mysql
+      #    coverage: none #optional
+      #    tools: codeception, phpunit, phpcs, phpmd, phan, phpstan, cs2pr
 
-      - name: Setup problem matchers for PHP
-        run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
+      #- name: Setup problem matchers for PHP
+      #  run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
 
       - name: PHP Version
         run: php -v
 
       # Static Analyzer
-      - name: PHPStan  # https://github.com/phpstan/phpstan, https://phpstan.org/user-guide/
-        if: ${{ always() }}
+      #- name: PHPStan  # https://github.com/phpstan/phpstan, https://phpstan.org/user-guide/
+      #  if: ${{ always() }}
         #run: phpstan analyse . --error-format=checkstyle | cs2pr # Use this in a pull-request run only
         #run: phpstan analyse -l 0 . --error-format=table # use loosest checks (8 is strictest)
-        run: phpstan analyse -c phpstan.neon --error-format=table
+      #  run: phpstan analyse -c phpstan.neon --error-format=table
         # To Consider: https://github.com/proget-hq/phpstan-yii2
 
       # May Require .phpcs.xml
@@ -55,15 +58,15 @@ jobs:
       #  run: phpcs -q --ignore=/vendor/ .
 
       # Static Analyzer
-      - name: PHPMD # https://phpmd.org, https://phpmd.org/documentation/
-        if: ${{ always() }}
-        run: phpmd . ansi cleancode,design,naming --exclude *vendor/*
+      #- name: PHPMD # https://phpmd.org, https://phpmd.org/documentation/
+      #  if: ${{ always() }}
+      #  run: phpmd . ansi cleancode,design,naming --exclude *vendor/*
 
       # Static Analyzer
       # Requires .phan/config.php file
-      - name: Phan # https://github.com/phan/phan, https://github.com/phan/phan/wiki/
-        if: ${{ always() }}
-        run: phan
+      #- name: Phan # https://github.com/phan/phan, https://github.com/phan/phan/wiki/
+      #  if: ${{ always() }}
+      #  run: phan
 
       # phplint does not pickup functions with missing arguments (e.g. date()) - may not be useful compared to phpstan
       # Syntax Checker
@@ -79,37 +82,36 @@ jobs:
       # Consider checkstyle during pull-requests - see https://github.com/staabm/annotate-pull-request-from-checkstyle
 
       # Codeception Testing
-      - name: Codeception Version
-        if: ${{ always() }}
-        run: php ./vendor/codeception/codeception/codecept --version
+      #- name: Codeception Version
+      #  if: ${{ always() }}
+      #  run: php ./vendor/codeception/codeception/codecept --version
 
       # Codeception Testing
-      - name: Codeception Unit Tests
-        if: ${{ always() }}
-        run: php ./vendor/codeception/codeception/codecept run unit
+      #- name: Codeception Unit Tests
+      #  if: ${{ always() }}
+      #  run: php ./vendor/codeception/codeception/codecept run unit
 
       # Versioning
       # See also: https://github.com/eine/actions/blob/3f0701c2f20780984590bd955839a38b75c96668/.github/workflows/push.yml#L33-L48
       # https://github.com/ad-m/github-push-action
       # https://github.community/t/how-does-one-commit-from-an-action/16127/5
 
-      - name: Edit version file
-        if: ${{ always() }}
-        run: |
-          echo "Date: " `date +'%m/%d/%y'` > ./VERSION
-          echo "SHA1: " ${GITHUB_SHA} >> ./VERSION
+      #- name: Edit version file
+      #  if: ${{ always() }}
+      #  run: |
+      #    echo "Date: " `date +'%m/%d/%y'` > ./VERSION
+      #    echo "SHA1: " ${GITHUB_SHA} >> ./VERSION
 
-      - name: Push updated version file
-        if: ${{ always() }}
-        run: |
-          git config --local user.email "infra@stash.global"
-          git config --local user.name ${GITHUB_ACTOR}
-          git add ./VERSION
-          git commit -m "Automated Version Update via Github Action"
-          git remote
-          git push
+      #- name: Push updated version file
+      #  if: ${{ always() }}
+      #  run: |
+      #    git config --local user.email "infra@stash.global"
+      #    git config --local user.name ${GITHUB_ACTOR}
+      #    git add ./VERSION
+      #    git commit -m "Automated Version Update via Github Action"
+      #    git remote
+      #    git push
 
-      - name: Version File Contents
-        if: ${{ always() }}
-        run: cat ./VERSION
-
+      #- name: Version File Contents
+      #  if: ${{ always() }}
+      #  run: cat ./VERSION
