--- a/.github/workflows/dev-push.yml
+++ b/.github/workflows/dev-push.yml
@@ -1,10 +1,10 @@
 # Github test action during pushes
 # YML workflow reference: https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions
-name: Master Push
+name: Dev Push
 on:
   push:
     branches:
-     - master
+     - develop
 jobs:
   php_check:
     name: PHP Checks
