--- a/.github/workflows/master-push.yml
+++ b/.github/workflows/master-push.yml
@@ -1,8 +1,8 @@
 # Github test action during pull requests
 # YML workflow reference: https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions
-name: Master PR
+name: Master Push
 on:
-  pull_request:
+  push:
     branches:
      - master
 jobs:
