--- a/.github/workflows/master-pr.yml
+++ b/.github/workflows/master-pr.yml
@@ -1,4 +1,4 @@
-# Github test action during pushes
+# Github test action during pull requests
 # YML workflow reference: https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions
 name: Master PR
 on:
