--- a/.github/workflows/master-push.yml
+++ b/.github/workflows/master-push.yml
@@ -1,12 +1,10 @@
-# Github test action during pull requests
+# Github test action during pushes
 # YML workflow reference: https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions
 name: Master Push
 on:
   push:
     branches:
      - master
-  paths-ignore:
-    - 'VERSION'
 jobs:
   php_check:
     name: PHP Checks
