Updated github actions -5

--- a/.github/workflows/dev-push.yml
+++ b/.github/workflows/dev-push.yml
@@ -1,4 +1,4 @@
-# Github test action during develop pushes
+# Github test action during develop pushes -2
 # YML workflow reference: https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions
 name: Dev Push
 on:
