--- a/.github/workflows/dev-push.yml
+++ b/.github/workflows/dev-push.yml
@@ -27,21 +27,25 @@ jobs:
       # Static code analysis with phan, phpstan
       # Unit/Functional tests with phpunit, codeception
       # Required support tools: cs2pr - for output formatting from phpcs and phpstan
-      #- name: Setup PHP, with composer and extensions
-      #  uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
-      #  with:
-      #    php-version: ${{ matrix.php-versions }}
-      #    extensions: mbstring, intl, gd, imagick, zip, dom, mysql
-      #    coverage: none #optional
-      #    tools: codeception, phpunit, phpcs, phpmd, phan, phpstan, cs2pr
+      - name: Setup PHP, with composer and extensions
+        uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
+        with:
+          php-version: ${{ matrix.php-versions }}
+          extensions: mbstring, intl, gd, imagick, zip, dom, mysql
+          coverage: none #optional
+          tools: codeception, phpunit, phpcs, phpmd, phan, phpstan, cs2pr
 
-      #- name: Setup problem matchers for PHP
-      #  run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
+      - name: Setup problem matchers for PHP
+        run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
 
       - name: PHP Version
         run: php -v
 
       # Static Analyzer
+      - name: PHPStan Version
+        if: ${{ always() }}
+        run: phpstan --version
+
       - name: PHPStan  # https://github.com/phpstan/phpstan, https://phpstan.org/user-guide/
         if: ${{ always() }}
         #run: phpstan analyse . --error-format=checkstyle | cs2pr # Use this in a pull-request run only
