--- a/.github/workflows/dev-push.yml
+++ b/.github/workflows/dev-push.yml
@@ -41,6 +41,9 @@ jobs:
       - name: PHP Version
         run: php -v
 
+      - name: PHP Modules
+        run: php -m
+
       # Static Analyzer
       - name: PHPStan Version
         if: ${{ always() }}
